media/gpu/vaapi H264Encoder: Remove I frame completely from generated encoded H264 stream

The size of I frame is large and thus is likely to make other frames lower
quality on the limited bitrate in webrtc case.
Originally, H264Encoder generates I frame every 248 frames. Therefore, webrtc
receiver observes low quality stream every 8 seconds.
Not generating I frame doesn't matter. This changes as H264Encoder doesn't generate
I frame on encoded stream.

BUG=chromium:806235
TEST=VEA unittest on caroline
TEST=https://appr.tc/?vrc=h264&vrbr=200&vsc=h264&vsbr=200
TEST=Record video with Chrome Camera App

Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I929f943659d2d547afc192a7a354ccaad398d576
Reviewed-on: https://chromium-review.googlesource.com/1013449
Reviewed-by: Pawel Osciak <posciak@chromium.org>
Commit-Queue: Hirokazu Honda <hiroh@chromium.org>
Cr-Commit-Position: refs/heads/master@{#564374}